Fixed some more pep8 issues and reconfigured some of the logic behind the ways in which the app functions.

--- a/Documents/pythonWebApp/src/static/css/main.css
+++ b/Documents/pythonWebApp/src/static/css/main.css
@@ -1,13 +1,8 @@
 #submit-form {
-    position: absolute;
     margin-top: 50px;
     left: 50%;
-    top: 50%;
 }
 
 .form-group {
-    position: absolute;
-    max-width: 240px;
-    left: 50%;
-    top: 50%;
+    max-width: 360px;
 }
